# logo-classification

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
logo_classification/: __main__.py  config.py  data.py  model.py
notebooks/: Baseline.ipynb  EDA.ipynb
scripts/: format.sh  lint.sh
