[tool.poetry]
authors = ["Andrii Sherman <watemerald@gmail.com>"]
description = ""
name = "logo-classification"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
pytorch-lightning = "^1.3.0"
pytorch-lightning-bolts = "^0.3.2"
torchvision = "^0.9.1"
wandb = "^0.10.30"
numpy = "^1.20.2"
pandas = "^1.2.4"
opencv-python = "^4.5.2"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
seaborn = "^0.11.1"
scikit-learn = "^0.24.2"
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "^20.8b1"
data-science-types = "*"
isort = "^5.7.0"
jupyter = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
flake8 = "^3.9.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
